# g1_robot

./: .gitignore  README.md  unitree_control_server.py
data/: face_database.json
src/common/: package.xml  setup.cfg  setup.py
src/common/common/: audio_handler.py  image_cache.py  image_uploader.py  logger_config.py  unitree_client.py
src/g1_behavior/: package.xml  setup.cfg  setup.py
src/g1_behavior/g1_behavior/: face_behavior_node.py  face_result_handlers.py  greeting_node.py
src/g1_behavior/launch/: g1_system.launch.py
src/g1_camera/: package.xml  setup.cfg  setup.py
src/g1_camera/g1_camera/: camera_node.py  face_node_direct.py  video_bridge_node.py
src/g1_face/: package.xml  setup.cfg  setup.py
src/g1_face/g1_face/: face_database.py  face_node.py
src/g1_interfaces/: CMakeLists.txt  package.xml
src/g1_interfaces/msg/: FaceResult.msg  MotionCmd.msg
src/g1_motion/: package.xml  setup.cfg  setup.py
src/g1_motion/g1_motion/: g1_debug_node.py  motion_controller.py  motion_node.py
src/unitree_sdk2_python-master/: setup.py
unitree_control/: README.md  logger_config.py  server.py
unitree_control/driver/: unitree_driver.py
unitree_control/motion/: base.py  executor.py  manager.py  primitives.py  sequences.py
