<package format="3">
  <name>common</name>
  <version>0.0.0</version>
  <description>Common utilities</description>

  <maintainer email="service02@haitch.cn">Nathan</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>