<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_behavior</name>
  <version>0.1.0</version>
  <description>G1 机器人面部行为响应包 - 处理人脸识别后的多种行为（如问候、API请求等）</description>
  <maintainer email="service02@haitch.cn">Nathan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>g1_interfaces</depend>
  <depend>unitree_sdk2py</depend>
  <exec_depend>websocket-client</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
