<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>g1_interfaces</name>
  <version>0.1.0</version>
  <description>G1 机器人自定义消息接口包 - 包含人脸结果和运动指令消息</description>

  <maintainer email="service02@haitch.cn">Nathan</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 生成消息需要 -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- 运行时需要 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 标记为接口包 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 测试工具 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
