<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_motion</name>
  <version>0.1.0</version>
  <description>G1 机器人运动控制包 - 基于 unitree_sdk2py 的动作执行和控制</description>
  <maintainer email="service02@haitch.cn">Nathan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>g1_interfaces</depend>
  <depend>unitree_sdk2py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
